# crypto_alfred

./: .flake8  .isort.cfg  Dockerfile  Makefile  README.md  bad_words.txt  docker-compose.yml  exchange_rate_notifier.py  invited_links.json  main.py  main_2.py  messages_templates.py  mongo_models.py  pyproject.toml  raw_telegram_client.py  requirements.txt  setup_bot.py  telegram_bot.py  users.json
clients/: coin_api_client.py  tg_client.py  users_api_client.py
handlers/: __init__.py  client.py  join_to_group.py  send_rating.py  start.py  start_for_referrals.py
keyboards/: __init__.py  accept_rules_keyboard.py  confirmation_send_rating_keyboard.py  is_delete_user_keyboard.py  main_keyboard.py  set_lang_keyboard.py  stop_send_rating_keyboard.py  write_to_admin_keyboard.py
locales/ka/LC_MESSAGES/: crypto_alfred.po
locales/ru/LC_MESSAGES/: crypto_alfred.po
scripts/: get_exchanges_rates.py  models.py  settings.py  utils.py
settings/: __init__.py  base.py  bot.py  clients.py  const.py  mongodb.py  users_api_client.py
utils/: __init__.py  types.py
