[tool.black]
line-length = 115
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
  venv
)/
'''

[tool.isort]
profile = "black"
line_length = 115
skip_gitignore = true

[tool.poetry]
name = "crypto_alfred"
version = "0.1.0"
description = "Main Coiners Bot"
authors = ["Best Developers ever"]

[tool.poetry.dependencies]
python = "^3.9"
pyTelegramBotAPI = "4.5.0"
envparse = "0.2.0"
mongoengine = "0.24.1"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"
aiogram = "2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
